fix: align long march task choice back button

--- a/src/projects/long-march-study/styles.css
+++ b/src/projects/long-march-study/styles.css
@@ -296,7 +296,7 @@
   height: 14.0193%;
 }
 
-.lm-task-choice-ivx-back {
+.lm-task-choice .lm-task-choice-ivx-back {
   left: calc(min(100vw, 750px) * 20 / 750);
   top: calc(min(100vw, 750px) * 32 / 750);
   width: calc(min(100vw, 750px) * 71 / 750);
